# rhai_rustler

./: .credo.exs  .dialyzer_ignore.exs  .gitignore  CHANGELOG.md  README.md  mix.exs
.github/: dependabot.yml
.github/workflows/: main.yaml  release.yaml  rust-ci.yaml
guides/: nif-bindings.md
lib/: evalex.ex  evalexpr.ex  rhai.ex
lib/evalex/: native.ex  precompiled_expression.ex
lib/rhai/: any.ex  ast.ex  engine.ex  error.ex  native.ex  package.ex  precompiled_expression.ex  scope.ex
native/evalex/: Cargo.toml  README.md
native/evalex/src/: errors.rs  lib.rs  types.rs
native/evalexpr_rustler/: Cargo.toml  README.md
native/evalexpr_rustler/src/: errors.rs  lib.rs
native/rhai_rustler/: Cargo.toml
native/rhai_rustler/.cargo/: config
native/rhai_rustler/src/: ast.rs  engine.rs  error.rs  errors.rs  lib.rs  scope.rs  types.rs
native/test_dylib_module/: Cargo.toml
native/test_dylib_module/.cargo/: config.toml
native/test_dylib_module/src/: api.rs  lib.rs
test/: evalex_test.exs  evalexpr_rustler_test.exs  rhai_test.exs
test/fixtures/: script.rhai  script_with_scope.rhai
test/rhai/: ast_test.exs  engine_test.exs  property.exs  property_test.exs  scope_test.exs
test/support/: test_native.ex
