[package]
name = "rhai_rustler"
version = "1.1.2-dev"
authors = ["Fabrizio Sestito <fabrizio.sestito@suse.com>"]
edition = "2021"

[lib]
name = "rhai_rustler"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rhai = { version = "=1.18.0", features = ["sync"] }
rhai-dylib = { version = "0.3.0", features = ["sync"] }
thiserror = "1.0.63"
rustler = "0.33.0"

[features]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
