[package]
name = "rhai_rustler"
version = "1.2.0"
authors = ["Fabrizio Sestito <fabrizio.sestito@suse.com>"]
edition = "2021"

[lib]
name = "rhai_rustler"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rhai = { version = "=1.22.2", features = ["sync"] }
rhai-dylib = { version = "0.5.0", features = ["sync"] }
thiserror = "2.0.12"
rustler = "0.36.1"

[features]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
