[package]
name = "test_dylib_module"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "test_dylib_module"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rhai = { version = "=1.13.0", features = ["sync"] }
rhai-dylib = { version = "=0.1.6", features = ["sync"] }
rustler = "0.27.0"

